--- a/Plewwow-Theme.theme.css
+++ b/Plewwow-Theme.theme.css
@@ -1,9 +1,9 @@
 /**
     * @name Plewwow-Theme
-    * @version 1
+    * @version 1.0.4
     * @description My personal Purple-Yellow theme I use
     * @author 2k#6272
-    *
+    * @source https://github.com/CatchySmile/dthemes
 **/
 
 
