--- a/Plewwow-Theme.theme.css
+++ b/Plewwow-Theme.theme.css
@@ -281,3 +281,84 @@ Main text and Elements
     line-height: 20px;
     color: #9f9a1b;
 }
+.theme-dark .root-g14mjS {
+    -webkit-box-shadow: 0 0 0 1px hsla(216,calc(var(--saturation-factor, 1)*7.2%),13.5%,.6),0 2px 10px 0 hsla(0,calc(var(--saturation-factor, 1)*0%),0%,.2);
+    box-shadow: 0 0 0 1px hsla(216,calc(var(--saturation-factor, 1)*7.2%),13.5%,.6),0 2px 10px 0 hsla(0,calc(var(--saturation-factor, 1)*0%),0%,.2);
+    background: rgb(20 5 25);
+}
+.reactionCount-26U4As {
+    font-size: 0.875rem;
+    font-weight: 500;
+    margin-left: .375rem;
+    text-align: center;
+    color: #9f9a1b;
+}
+.scroller-1bVxF5 {
+    background: #140519;
+    padding: 6px 8px;
+}
+.contentWrapper-3vHNP2 {
+    background-color: #1a0720;
+    border-radius: 8px;
+    -webkit-box-shadow: var(--elevation-stroke),var(--elevation-high);
+    box-shadow: var(--elevation-stroke),var(--elevation-high);
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    display: grid;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    grid-template-rows: 24px auto;
+    grid-row-gap: 8px;
+    height: 100%;
+    overflow: hidden;
+    padding-top: 16px;
+    position: relative;
+    z-index: 1;
+}
+.navButtonActive-1EqC5l, .navButtonActive-1EqC5l:hover {
+    color: hsl(0,calc(var(--saturation-factor, 1)*0%),100%);
+    color: #bdb721;
+}
+.stickersNavItem-9B2BzM, .stickersUnseenBadge-2q3wVr {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    color: #bdb721;
+}
+.navButton-1XuvI- {
+    border-radius: 4px;
+    color: var(--interactive-normal);
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 20px;
+    padding: 2px 8px;
+    -webkit-transition: background-color .1s ease-in-out,color .1s ease-in-out;
+    transition: background-color .1s ease-in-out,color .1s ease-in-out;
+    color: #bdb721;
+}
+.navButtonActive-1EqC5l {
+    background-color: rgb(77 0 92);
+}
+.medium-2NClDM .input-2m5SfJ, .medium-2NClDM .tag-Pxnlt9 {
+    font-size: 16px;
+    line-height: 32px;
+    height: 30px;
+    padding: 0 8px;
+    background: rgb(23 5 29);
+}
+.inner-2pOSmK {
+    position: relative;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    padding: 1px;
+    min-width: 0;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background: rgb(23 5 29);
+}
