--- a/Plewwow-Theme.theme.css
+++ b/Plewwow-Theme.theme.css
@@ -639,3 +639,68 @@ Main text and Elements
     max-height: calc(100vh - 128px);
     background: #140519;
 }
+.header-1ULbqO {
+    position: sticky;
+    top: 0;
+    background: #17051d;
+}
+.scroller-2MALzE {
+    height: 100%;
+    background: #17051d;
+}
+.medium-13kyaW .input-2FSSDe, .medium-13kyaW .tag-15zcD_ {
+    font-size: 16px;
+    line-height: 32px;
+    height: 30px;
+    padding: 0 8px;
+    background: rgb(20 5 25);
+}
+.inner-1NoIT5 {
+    position: relative;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    padding: 1px;
+    background: rgb(20 5 25);
+}
+.unicodeShortcut-3N8oDe {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background: inherit;
+    color: var(--interactive-normal);
+    cursor: pointer;
+    bottom: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 48px;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    left: 0;
+    opacity: 1;
+    position: absolute;
+    -webkit-transition: opacity .1s,-webkit-transform .1s;
+    transition: opacity .1s,-webkit-transform .1s;
+    transition: opacity .1s,transform .1s;
+    transition: opacity .1s,transform .1s,-webkit-transform .1s;
+    width: 100%;
+    background: rgb(16 3 21);
+}
+.categoryItemDefaultCategory-3haEDq {
+    border-radius: 4px;
+    height: 24px;
+    margin-bottom: 2px;
+    padding: 4px;
+    -webkit-transition: background-color .1s ease-in-out;
+    transition: background-color .1s ease-in-out;
+    width: 24px;
+    background: rgb(23 5 29);
+}
